fixed paginator position and content overflow

--- a/src/app/post/post-list/post-list.component.scss
+++ b/src/app/post/post-list/post-list.component.scss
@@ -17,13 +17,33 @@
 
   .content{
     position:relative;
+    // height: 100vh;
+    // border:2px solid purple;
+    display:flex;
+    justify-content: space-between;
+    // align-items: center;
+    // overflow-y: scroll;
+    flex-wrap: wrap;
+    // height:100vh;
+    // overflow: visible;
+    height:fit-content;
+    padding:1.5rem;
+    
+  }
+
+  .post-content{
+    // display:flex;
+    // overflow-y: scroll;
+    // flex-wrap: wrap;
+    height:80vh
   }
 
   mat-paginator{
     position:absolute;
     bottom:0;
     left:0;
-    right:0
+    right:0;
+    position:fixed;
   }
 
 .card-container{
